--- a/latihan.html
+++ b/latihan.html
@@ -1,21 +1,16 @@
-name: Cek Kode HTML (Windows)
+<html>
+    <head>
+        <title>Learn Github</title>
+    </head>
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-
-jobs:
-  lint:
-    runs-on: windows-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install HTMLHint
-        run: npm install -g htmlhint
-
-      - name: Periksa HTML
-        run: htmlhint "**/*.html"
+    <body>
+        <h1>Git Tutorial</h1>
+        <h3>Git Commands</h3>
+        <ul>
+            <li>git init</li>
+            <li>git add</li>
+            <li>git commit</li>
+            <li>git push</li>
+            <li>git pull</li>
+    </body>
+</html>
