--- a/latihan.html
+++ b/latihan.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Learn Github</title>
@@ -12,5 +13,6 @@
             <li>git commit</li>
             <li>git push</li>
             <li>git pull</li>
+        </ul>
     </body>
 </html>
